[project]
name = "win-condition-optimizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "seaborn>=0.13.2",
    "statsbombpy>=1.17.0",
    "tqdm>=4.67.3",
]
